# vst-host

./: .gitignore  CMakeLists.txt  README.md
docs/: vst3-single-plugin-host-plan.md
src/: Main.cpp  MainComponent.cpp  MainComponent.h
